<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_roundedrectangle"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_previousitem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:id="@+id/tv_recipedetail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:fontFamily="sans-serif"
            tools:text="TEst"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"

            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_nextitem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_recipedetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:divider="@null"
        android:dividerHeight="10dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>