<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/ingredientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </ListView>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/myexo_playerview"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_gravity="center|center_vertical"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <TextView
        android:id="@+id/step_desc_tv"
        android:layout_width="340dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/nextbutton"
        android:layout_height="wrap_content"
        android:text="NEXT"/>

</LinearLayout>